# TestMatch3

./: .gitignore  CMakeLists.txt  EditorConfig.json  MakeWindowsMSVSProject.bat  README.md
Assets/: BasicAtlas.atlas  Gamefield.scn  ass.anim
Assets/Animal screen/: AnimalScreen
Assets/Animals/Dog/: Dog
Assets/Game field/: Gamefield.atlas
Assets/Game field/Objects/: Objects.atlas
Assets/Prefabs/: BaseChip.proto  Cell.proto  GreenChip.proto  MenuBtn.proto  RedChip.proto  VioletChip.proto  YellowChip.proto
BuiltAssets/Windows/: Data.json  EditorData.json
BuiltAssets/Windows/Data/: BasicAtlas.atlas  Gamefield.scn
BuiltAssets/Windows/Data/Prefabs/: BaseChip.proto  BlueChip.proto  Cell.proto  MenuBtn.proto
Sources/Game/: CheckupTypes.h  EditorLib.cpp  GameApplication.cpp  GameApplication.h  GameLib.cpp  GameManager.cpp  GameManager.h  GameMenu.cpp  GameMenu.h
Sources/Game/Gamefield/: Cell.cpp  Cell.h  CellBehaviour.cpp  CellBehaviour.h  Chip.cpp  Chip.h  ChipBehaviour.cpp  ChipBehaviour.h  ChipsSpawner.cpp  ChipsSpawner.h  Gamefield.cpp  Gamefield.h  GamefieldBehaviour.cpp  GamefieldBehaviour.h
Sources/Game/Gamefield/Behaviours/: CheckMatchesGamefieldBehaviour.cpp  CheckMatchesGamefieldBehaviour.h  ChipsFallGamefieldBehaviour.cpp  ChipsFallGamefieldBehaviour.h
Sources/Game/Gamefield/Cell/: Cell.cpp  Cell.h  CellBehaviour.cpp  CellBehaviour.h
Sources/Game/Gamefield/Cell/Behaviours/: ChipsSpawner.cpp  ChipsSpawner.h
Sources/Game/Gamefield/Chip/: Chip.cpp  Chip.h  ChipBehaviour.cpp  ChipBehaviour.h  ChipColor.cpp  ChipColor.h
